--- a/teacher_latex.tex
+++ b/teacher_latex.tex
@@ -1,39 +1,1 @@
-\documentclass{exam}
-\usepackage[utf8]{inputenc}
-\begin{document}
-\section*{ECE 370: Advanced Computing in ECE}
-\subsection*{Quiz \#1: The Quadratic Equation}
-\today \\
-\vspace{1mm}
-\\
-\makebox[\textwidth]{Name:\enspace\hrulefill}
-\vspace{3mm}
-
-\begin{questions}
- \question Solve for the roots: \(x^2 +2x + 1 = 0\)
-
-\subsection*{Discriminant:} 
-\[d = 2^2 - 4\cdot 1 \cdot 1 = 4 - 4 = 0\]
- \subsection*{Repeated Roots: \(d = 0\)}
- \[x_1 = -\frac{2}{2} + \frac{\sqrt{0}}{1} = 0 + 0 = -1\]
- \[x_2 = -\frac{2}{2} - \frac{\sqrt{0}}{1} = 0 - 0 = -1\]
- \vspace{\stretch{1}}
- \question Solve for the roots: \(x^2 +2x - 15 = 0\)
-
-\subsection*{Discriminant:} 
-\[d = 2^2 - 4\cdot 1 \cdot -15 = 4 - -60 = 64\]
- \subsection*{Real Roots: \(d > 0\)}
- \[x_1 = -\frac{2}{2} + \frac{\sqrt{64}}{1} = 0 + 0 = 3\]
- \[x_2 = -\frac{2}{2} - \frac{\sqrt{64}}{1} = 0 - 0 = -5\]
- \vspace{\stretch{1}}
- \question Solve for the roots: \(x^2 +4x + 8 = 0\)
-
-\subsection*{Discriminant:} 
-\[d = 4^2 - 4\cdot 1 \cdot 8 = 16 - 32 = -16\]
- \subsection*{Complex Roots: \(d < 0\)}
- \[x_1 = -\frac{4}{4} + \frac{\sqrt{-16}}{1} = -2 + 2i\]
- \[x_2 = -\frac{4}{4} + \frac{\sqrt{-16}}{1} = -2 - 2i\]
-
-\end{questions}
-
-\end{document}
+TEACHER HAS NO ANSWERS NOW
